# SIN-Code-Honcho-Rollback-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
examples/: bad.doc.md  bad.py  good.doc.md  good.py
hooks/: post_install.doc.md  post_install.sh
lib/: __init__.doc.md  __init__.py  audit.doc.md  audit.py  diff.doc.md  diff.py  mcp_server.doc.md  mcp_server.py  rollback.doc.md  rollback.py  snapshot.doc.md  snapshot.py  storage.doc.md  storage.py
scripts/: __init__.py  sin_honcho_rollback.doc.md  sin_honcho_rollback.py
templates/: cron_rollback.doc.md  cron_rollback.sh
tests/: __init__.py  conftest.doc.md  conftest.py  test_audit.doc.md  test_audit.py  test_diff.doc.md  test_diff.py  test_rollback.doc.md  test_rollback.py  test_snapshot.doc.md  test_snapshot.py  test_storage.doc.md  test_storage.py
